:bug: fix(User): PR 기반 수정 (#4)